[gd_scene load_steps=2 format=3 uid="uid://b0f85fb7fa5hj"]

[ext_resource type="Script" path="res://scripts/user_interface/CustomButton.gd" id="1_nr25w"]

[node name="CustomButton" type="Button"]
offset_right = 48.0
offset_bottom = 48.0
alignment = 0
script = ExtResource("1_nr25w")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"Sounds"

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
